# handwritten-digit-recognition

./: .gitignore  LICENSE  README.md  api.py  app.py  main.ipynb  pyproject.toml
models/: mnist_model.keras
