[project]
name = "handwritten-digit-recognition"
version = "0.1.0"
description = "An end-to-end machine learning project for training and deploying a handwritten digit recognition model."
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.1",
    "tensorflow>=2.19.0",
]
